h1 and h2 font and size changed

--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Bookmark</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Poppins:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>My Bookmark</h1>
-    <h2>Primary Bookmark</h2>
+    <h1>QuickNav</h1>
+    <h2>Primary</h2>
     <p><a class="glass-button" target="_blank" href="https://google.com">Open Google</a></p>
     <p><a class="glass-button" target="_blank" href="https://www.tradingview.com/chart/4DHBbvBv/">Open XAUUSD</a></p>
     <p><a class="glass-button" target="_blank" href="https://www.tradingview.com/chart/4DHBbvBv/">Open NAS100</a></p>
@@ -16,7 +19,7 @@
     <p><a class="glass-button" target="_blank" href="https://www.youtube.com/playlist?list=PLu0W_9lII9agq5TrH9XLIKQvv0iaF2X3w">Open CodeWith HArry</a></p>
     <p><a class="glass-button" target="_blank" href="https://chatgpt.com/?model=auto">Open Chatgpt</a></p>
 
-    <h2>Secondary Bookmark</h2>
+    <h2>Secondary</h2>
     <p><a class="glass-button" target="_blank" href="https://gemini.google.com/app/baa2f85b8f739f5b">Open GEmini</a></p>
 
 </body>
