--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <h1>QuickNav</h1>
     <h2>Primary</h2>
     <p><a class="glass-button" target="_blank" href="https://google.com">Open Google</a></p>
-    <p><a class="glass-button" target="_blank" href="https://www.tradingview.com/chart/4DHBbvBv/">Open XAUUSD</a></p>
-    <p><a class="glass-button" target="_blank" href="https://www.tradingview.com/chart/4DHBbvBv/">Open NAS100</a></p>
+    <p><a class="glass-button" target="_blank" href="https://www.tradingview.com/chart/4DHBbvBv/">Open Tradingview</a></p>
+    <!-- <p><a class="glass-button" target="_blank" href="https://www.tradingview.com/chart/4DHBbvBv/">Open NAS100</a></p> -->
     <p><a class="glass-button" target="_blank" href="https://www.youtube.com">Open Youtube</a></p>
     <p><a class="glass-button" target="_blank" href="https://www.youtube.com/playlist?list=PLu0W_9lII9agq5TrH9XLIKQvv0iaF2X3w">Open CodeWith HArry</a></p>
     <p><a class="glass-button" target="_blank" href="https://chatgpt.com/?model=auto">Open Chatgpt</a></p>
