improved readability of fonts

--- a/index.html
+++ b/index.html
@@ -22,5 +22,7 @@
     <h2>Secondary</h2>
     <p><a class="glass-button" target="_blank" href="https://gemini.google.com/app/baa2f85b8f739f5b">Open GEmini</a></p>
 
+    <script src="script.js"></script>
+
 </body>
 </html>
